--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,4 +68,7 @@ flutter {
 dependencies {
     implementation(platform("com.google.firebase:firebase-bom:33.1.2"))
     implementation("com.google.firebase:firebase-analytics")
+    implementation ('com.google.firebase:firebase-auth')
+    implementation ('com.google.android.gms:play-services-base:18.3.0')
+    implementation ('com.google.android.gms:play-services-auth:20.7.0')
 }
